@@ -1,3 +1,12 @@
+2004-12-06 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
+   * Example/Volume2Dicom.cxx : comment unused variables
+   * Test/PrintDicomDir.cxx : comment unused variables
+   * Test/BuildUpDicomDir.cxx : remove dbg.Verbose. Remove the FIXME.
+   * src/SQItem.[h|cxx] : remove the PtagHT variable. Remove the AddDocEntry
+     method that is redondant with AddEntry.
+   * src/gdcmDocEntrySet.h : add pure virtual methods common to ElementSet and
+     SQItem
+
 2004-12-04 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
    * Bug fix due my last commit (compilation under Windows).
    * Example/Volume2Dicom : bug fix in the file and reformatting source code
